[gd_scene load_steps=6 format=3 uid="uid://bwxm8q3r4n5p2"]

[ext_resource type="Script" path="res://scripts/map_boundaries.gd" id="1_boundaries"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(20, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(20, 700)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3"]
size = Vector2(1200, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4"]
size = Vector2(1200, 20)

[node name="MapBoundaries" type="Node2D"]
script = ExtResource("1_boundaries")

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(-10, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_1")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1164, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_2")

[node name="TopWall" type="StaticBody2D" parent="."]
position = Vector2(577, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
shape = SubResource("RectangleShape2D_3")

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(577, 605)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource("RectangleShape2D_4")
